src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> tag
Rule 1     tag -> TAG_NAME LPAREN attributes RPAREN tag_children
Rule 2     tag -> TAG_NAME tag_children
Rule 3     attributes -> attribute COMMA attributes
Rule 4     attributes -> attribute
Rule 5     attribute -> ATTRIBUTE_NAME EQUALS ATTRIBUTE_VALUE
Rule 6     attribute -> attribute_empty
Rule 7     attribute_empty -> <empty>
Rule 8     tag_children -> tag tag_children
Rule 9     tag_children -> TEXT_CONTENT tag_children
Rule 10    tag_children -> <empty>

Terminals, with rules where they appear

ATTRIBUTE_NAME       : 5
ATTRIBUTE_VALUE      : 5
COMMA                : 3
EQUALS               : 5
LPAREN               : 1
RPAREN               : 1
TAG_NAME             : 1 2
TEXT_CONTENT         : 9
error                : 

Nonterminals, with rules where they appear

attribute            : 3 4
attribute_empty      : 6
attributes           : 1 3
tag                  : 8 0
tag_children         : 1 2 8 9

Parsing method: LALR

state 0

    (0) S' -> . tag
    (1) tag -> . TAG_NAME LPAREN attributes RPAREN tag_children
    (2) tag -> . TAG_NAME tag_children

    TAG_NAME        shift and go to state 2

    tag                            shift and go to state 1

state 1

    (0) S' -> tag .



state 2

    (1) tag -> TAG_NAME . LPAREN attributes RPAREN tag_children
    (2) tag -> TAG_NAME . tag_children
    (8) tag_children -> . tag tag_children
    (9) tag_children -> . TEXT_CONTENT tag_children
    (10) tag_children -> .
    (1) tag -> . TAG_NAME LPAREN attributes RPAREN tag_children
    (2) tag -> . TAG_NAME tag_children

  ! shift/reduce conflict for TEXT_CONTENT resolved as shift
  ! shift/reduce conflict for TAG_NAME resolved as shift
    LPAREN          shift and go to state 3
    TEXT_CONTENT    shift and go to state 6
    $end            reduce using rule 10 (tag_children -> .)
    TAG_NAME        shift and go to state 2

  ! TEXT_CONTENT    [ reduce using rule 10 (tag_children -> .) ]
  ! TAG_NAME        [ reduce using rule 10 (tag_children -> .) ]

    tag_children                   shift and go to state 4
    tag                            shift and go to state 5

state 3

    (1) tag -> TAG_NAME LPAREN . attributes RPAREN tag_children
    (3) attributes -> . attribute COMMA attributes
    (4) attributes -> . attribute
    (5) attribute -> . ATTRIBUTE_NAME EQUALS ATTRIBUTE_VALUE
    (6) attribute -> . attribute_empty
    (7) attribute_empty -> .

    ATTRIBUTE_NAME  shift and go to state 9
    COMMA           reduce using rule 7 (attribute_empty -> .)
    RPAREN          reduce using rule 7 (attribute_empty -> .)

    attributes                     shift and go to state 7
    attribute                      shift and go to state 8
    attribute_empty                shift and go to state 10

state 4

    (2) tag -> TAG_NAME tag_children .

    $end            reduce using rule 2 (tag -> TAG_NAME tag_children .)
    TEXT_CONTENT    reduce using rule 2 (tag -> TAG_NAME tag_children .)
    TAG_NAME        reduce using rule 2 (tag -> TAG_NAME tag_children .)


state 5

    (8) tag_children -> tag . tag_children
    (8) tag_children -> . tag tag_children
    (9) tag_children -> . TEXT_CONTENT tag_children
    (10) tag_children -> .
    (1) tag -> . TAG_NAME LPAREN attributes RPAREN tag_children
    (2) tag -> . TAG_NAME tag_children

  ! shift/reduce conflict for TEXT_CONTENT resolved as shift
  ! shift/reduce conflict for TAG_NAME resolved as shift
    TEXT_CONTENT    shift and go to state 6
    $end            reduce using rule 10 (tag_children -> .)
    TAG_NAME        shift and go to state 2

  ! TEXT_CONTENT    [ reduce using rule 10 (tag_children -> .) ]
  ! TAG_NAME        [ reduce using rule 10 (tag_children -> .) ]

    tag                            shift and go to state 5
    tag_children                   shift and go to state 11

state 6

    (9) tag_children -> TEXT_CONTENT . tag_children
    (8) tag_children -> . tag tag_children
    (9) tag_children -> . TEXT_CONTENT tag_children
    (10) tag_children -> .
    (1) tag -> . TAG_NAME LPAREN attributes RPAREN tag_children
    (2) tag -> . TAG_NAME tag_children

  ! shift/reduce conflict for TEXT_CONTENT resolved as shift
  ! shift/reduce conflict for TAG_NAME resolved as shift
    TEXT_CONTENT    shift and go to state 6
    $end            reduce using rule 10 (tag_children -> .)
    TAG_NAME        shift and go to state 2

  ! TEXT_CONTENT    [ reduce using rule 10 (tag_children -> .) ]
  ! TAG_NAME        [ reduce using rule 10 (tag_children -> .) ]

    tag_children                   shift and go to state 12
    tag                            shift and go to state 5

state 7

    (1) tag -> TAG_NAME LPAREN attributes . RPAREN tag_children

    RPAREN          shift and go to state 13


state 8

    (3) attributes -> attribute . COMMA attributes
    (4) attributes -> attribute .

    COMMA           shift and go to state 14
    RPAREN          reduce using rule 4 (attributes -> attribute .)


state 9

    (5) attribute -> ATTRIBUTE_NAME . EQUALS ATTRIBUTE_VALUE

    EQUALS          shift and go to state 15


state 10

    (6) attribute -> attribute_empty .

    COMMA           reduce using rule 6 (attribute -> attribute_empty .)
    RPAREN          reduce using rule 6 (attribute -> attribute_empty .)


state 11

    (8) tag_children -> tag tag_children .

    $end            reduce using rule 8 (tag_children -> tag tag_children .)
    TEXT_CONTENT    reduce using rule 8 (tag_children -> tag tag_children .)
    TAG_NAME        reduce using rule 8 (tag_children -> tag tag_children .)


state 12

    (9) tag_children -> TEXT_CONTENT tag_children .

    $end            reduce using rule 9 (tag_children -> TEXT_CONTENT tag_children .)
    TEXT_CONTENT    reduce using rule 9 (tag_children -> TEXT_CONTENT tag_children .)
    TAG_NAME        reduce using rule 9 (tag_children -> TEXT_CONTENT tag_children .)


state 13

    (1) tag -> TAG_NAME LPAREN attributes RPAREN . tag_children
    (8) tag_children -> . tag tag_children
    (9) tag_children -> . TEXT_CONTENT tag_children
    (10) tag_children -> .
    (1) tag -> . TAG_NAME LPAREN attributes RPAREN tag_children
    (2) tag -> . TAG_NAME tag_children

  ! shift/reduce conflict for TEXT_CONTENT resolved as shift
  ! shift/reduce conflict for TAG_NAME resolved as shift
    TEXT_CONTENT    shift and go to state 6
    $end            reduce using rule 10 (tag_children -> .)
    TAG_NAME        shift and go to state 2

  ! TEXT_CONTENT    [ reduce using rule 10 (tag_children -> .) ]
  ! TAG_NAME        [ reduce using rule 10 (tag_children -> .) ]

    tag_children                   shift and go to state 16
    tag                            shift and go to state 5

state 14

    (3) attributes -> attribute COMMA . attributes
    (3) attributes -> . attribute COMMA attributes
    (4) attributes -> . attribute
    (5) attribute -> . ATTRIBUTE_NAME EQUALS ATTRIBUTE_VALUE
    (6) attribute -> . attribute_empty
    (7) attribute_empty -> .

    ATTRIBUTE_NAME  shift and go to state 9
    COMMA           reduce using rule 7 (attribute_empty -> .)
    RPAREN          reduce using rule 7 (attribute_empty -> .)

    attribute                      shift and go to state 8
    attributes                     shift and go to state 17
    attribute_empty                shift and go to state 10

state 15

    (5) attribute -> ATTRIBUTE_NAME EQUALS . ATTRIBUTE_VALUE

    ATTRIBUTE_VALUE shift and go to state 18


state 16

    (1) tag -> TAG_NAME LPAREN attributes RPAREN tag_children .

    $end            reduce using rule 1 (tag -> TAG_NAME LPAREN attributes RPAREN tag_children .)
    TEXT_CONTENT    reduce using rule 1 (tag -> TAG_NAME LPAREN attributes RPAREN tag_children .)
    TAG_NAME        reduce using rule 1 (tag -> TAG_NAME LPAREN attributes RPAREN tag_children .)


state 17

    (3) attributes -> attribute COMMA attributes .

    RPAREN          reduce using rule 3 (attributes -> attribute COMMA attributes .)


state 18

    (5) attribute -> ATTRIBUTE_NAME EQUALS ATTRIBUTE_VALUE .

    COMMA           reduce using rule 5 (attribute -> ATTRIBUTE_NAME EQUALS ATTRIBUTE_VALUE .)
    RPAREN          reduce using rule 5 (attribute -> ATTRIBUTE_NAME EQUALS ATTRIBUTE_VALUE .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for TEXT_CONTENT in state 2 resolved as shift
WARNING: shift/reduce conflict for TAG_NAME in state 2 resolved as shift
WARNING: shift/reduce conflict for TEXT_CONTENT in state 5 resolved as shift
WARNING: shift/reduce conflict for TAG_NAME in state 5 resolved as shift
WARNING: shift/reduce conflict for TEXT_CONTENT in state 6 resolved as shift
WARNING: shift/reduce conflict for TAG_NAME in state 6 resolved as shift
WARNING: shift/reduce conflict for TEXT_CONTENT in state 13 resolved as shift
WARNING: shift/reduce conflict for TAG_NAME in state 13 resolved as shift
